k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supportflow-frontend
  namespace: supportflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supportflow-frontend
  template:
    metadata:
      labels:
        app: supportflow-frontend
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frontend
          image: ghcr.io/mejrioussama/supportflow-frontend:staging
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: runtime-config
              mountPath: /usr/share/nginx/html/assets/runtime-config.js
              subPath: runtime-config.js
              readOnly: true
      volumes:
        - name: runtime-config
          configMap:
            name: supportflow-frontend-runtime
